tests/invalid_nodepend/typeclass_test_1.err_exp
typeclass_test_1.m:005: Error: [38;5;203mmodule must start with a `:- module'[39;49m
typeclass_test_1.m:005:   [38;5;203mdeclaration.[39;49m
typeclass_test_1.m:012: In clause for predicate `main'/2:
typeclass_test_1.m:012:   error: the typeclass constraint
typeclass_test_1.m:012:     [38;5;87m`typeclass_test_1.numbered_type(int)'[39;49m
typeclass_test_1.m:012:   is [38;5;203munsatisfiable.[39;49m
typeclass_test_1.m:019: Error: expected
typeclass_test_1.m:019:     [38;5;40m`pred(<Name> / <Arity>) is <InstanceName>'[39;49m
typeclass_test_1.m:019:   or
typeclass_test_1.m:019:     [38;5;40m`func(<Name> / <Arity>) is <InstanceName>',[39;49m
typeclass_test_1.m:019:   got
typeclass_test_1.m:019:     [38;5;203m(type_num is foo_type_num).[39;49m
typeclass_test_1.m:022: Syntax error at variable `_': operator or `.' expected.
